--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -6,5 +6,5 @@
     <p>{{ post.content }}</p>
   </mat-expansion-panel>
 </mat-accordion>
-<p *ngIf="posts.length <= 0">no posts added yet</p>
+<p class="info-text mat-body-1" *ngIf="posts.length <= 0">no posts added yet</p>
 
