--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -4,6 +4,10 @@
       <input matInput type="text" name="title" ngModel required placeholder="Post Title" #title=ngModel>
       <mat-error *ngIf="title.invalid">Please enter correct title</mat-error>
     </mat-form-field>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">Save Image</button>
+      <input type="file" #filePicker>
+    </div>
     <mat-form-field>
       <textarea matInput rows="6" name="content" ngModel required placeholder="Post Content" #content=ngModel></textarea>
       <mat-error *ngIf="content.invalid">Please enter correct content</mat-error>
