--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,17 +1,17 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
-      <input matInput type="text" name="title" [ngModel]="post?.title" required placeholder="Post Title" #title=ngModel>
-      <mat-error *ngIf="title.invalid">Please enter correct title</mat-error>
+      <input matInput formControlName="title" type="text" name="title" placeholder="Post Title">
+      <mat-error *ngIf="form.get('title').invalid">Please enter correct title</mat-error>
     </mat-form-field>
     <div>
       <button mat-stroked-button type="button" (click)="filePicker.click()">Save Image</button>
-      <input type="file" #filePicker>
+      <input type="file" #filePicker (change)="onImagePicked($event)">
     </div>
     <mat-form-field>
-      <textarea matInput rows="6" name="content" [ngModel]="post?.content" required placeholder="Post Content" #content=ngModel></textarea>
-      <mat-error *ngIf="content.invalid">Please enter correct content</mat-error>
+      <textarea matInput formControlName="content" rows="6" name="content" placeholder="Post Content"></textarea>
+      <mat-error *ngIf="form.get('content').invalid">Please enter correct content</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Save Post</button>
   </form>
