--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -2,14 +2,14 @@
   <mat-spinner *ngIf="isLoading"></mat-spinner>
   <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
-      <input matInput formControlName="title" type="text" name="title" placeholder="Post Title">
+      <input matInput formControlName="title" type="text" placeholder="Post Title">
       <mat-error *ngIf="form.get('title').invalid">Please enter correct title</mat-error>
     </mat-form-field>
     <div>
       <button mat-stroked-button type="button" (click)="filePicker.click()">Save Image</button>
       <input type="file" #filePicker (change)="onImagePicked($event)">
     </div>
-    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview">
+    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
       <img [src]="imagePreview" [alt]="form.value.title">
     </div>
     <mat-form-field>
