--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -9,6 +9,6 @@
      <input type="password" name="password" ngModel matInput placeholder="password" #passwordInput="ngModel" required>
       <mat-error *ngIf="passwordInput.invalid">Please enter valid password</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">Signin</button>
+    <button mat-raised-button color="primary" type="submit">Sign Up</button>
   </form>
 </mat-card>
